--- a/build-MatchManagerSystem-Desktop_Qt_5_13_2_MinGW_32_bit-Debug/Makefile
+++ b/build-MatchManagerSystem-Desktop_Qt_5_13_2_MinGW_32_bit-Debug/Makefile
@@ -225,10 +225,14 @@ Makefile: ../MatchManagerSystem/MatchManagerSystem.pro C:/Qt/Qt5.13.2/5.13.2/min
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/qt_config.prf \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/toolchain.prf \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/default_pre.prf \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/win32/default_pre.prf \
+		../MatchManagerSystem/presentation.pri \
+		../MatchManagerSystem/persistance.pri \
+		../MatchManagerSystem/service.pri \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/resolve_config.prf \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/exclusive_builds_post.prf \
 		C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/default_post.prf \
@@ -416,10 +420,14 @@ C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/qt_functions.prf:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/qt_config.prf:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/win32-g++/qmake.conf:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/exclusive_builds.prf:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/toolchain.prf:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/default_pre.prf:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/win32/default_pre.prf:
+../MatchManagerSystem/presentation.pri:
+../MatchManagerSystem/persistance.pri:
+../MatchManagerSystem/service.pri:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/resolve_config.prf:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/exclusive_builds_post.prf:
 C:/Qt/Qt5.13.2/5.13.2/mingw73_32/mkspecs/features/default_post.prf:
